# mruby-playground

./: .gitignore  CMakeLists.txt  consts.h  main.c  postbuild.sh  readme.md  rvm.c  rvm.h
rubies/: common.mrb  common.rb  game_demo.mrb  game_demo.rb  game_demo_require.mrb  game_demo_require.rb  hw.mrb  hw_invalid.mrb  test.mrb  test2.mrb  test2.rb  test3.mrb  test_c_fun.mrb
src/: bootstrap.h  consts.h  main.c  mruby_sink.c  rvm.c  rvm.h
src/include/: mruby_sink.h  rvm.h
src/rubies/: common.rb  core_defs.rb  game_demo.rb  game_demo_require.rb  require_test.rb  require_tgt.rb  test2.rb  test3.rb  test_consts.rb  test_natives.rb  trig.rb
src/std/: core.rb  std.rb
std/: std.mrb  std.rb
